tests/fixtures/invalid/pow_bytes_str_int.py
# Cannot call pow() with Bytes, Str, Int
x = pow(b"hello", "hello", 1)
